--- a/containers/images/hawkular-mock-agent-inventory/Dockerfile
+++ b/containers/images/hawkular-mock-agent-inventory/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install -r requirements.txt
 COPY resources.py .
 COPY hawkular-mock-agent-inventory.py .
 
-CMD locust -f hawkular-mock-agent-inventory.py --host ${HAWKULAR_INVENTORY_URL} -c 1000  --print-stats --no-web
+CMD locust -f hawkular-mock-agent-inventory.py --host ${HAWKULAR_INVENTORY_URL} -c ${NUMBER_OF_CLIENTS} --print-stats --no-web
